--- a/src/features/dashboard/notification/action/action.component.html
+++ b/src/features/dashboard/notification/action/action.component.html
@@ -62,15 +62,20 @@
       </div>
 
       <div class="users h-72 overflow-y-auto">
-        @for(user of selected_users() ; track $index){
-        <div class="single_user mb-4 p-3 rounded-xl shadow flex items-center gap-4">
-          <div class="user_img">
-            <i class="fi fi-rr-circle-user text-4xl"></i>
+        @for(user of selected_users() ; track $index ; let i =$index){
+        <div class="single_user mb-4 p-3 rounded-xl shadow  flex items-center ">
+          <div class=" flex-1 flex items-center gap-4">
+            <div class="user_img">
+              <i class="fi fi-rr-circle-user text-4xl"></i>
+            </div>
+            <div>
+              <p>{{user?.userName}}</p>
+              <p>{{user?.companyName}}</p>
+            </div>
           </div>
-          <div>
-            <p>{{user?.userName}}</p>
-            <p>{{user?.companyName}}</p>
-          </div>
+          <button (click)="selected_users().splice(i , 1) ; users().push(user)">
+            <i class="fi fi-rr-trash text-danger_color"></i>
+          </button>
         </div>
         }
       </div>
@@ -88,7 +93,7 @@
             <i class="fi fi-rr-search text-xl flex items-center justify-center text-gray_light"></i>
           </div>
           <p-dropdown (onChange)="handleGetDevices()" [(ngModel)]="selected_type" [options]="devicesTypes()"
-            appendTo="body" [placeholder]="'Select Type'" />
+            appendTo="body" optionLabel="deviceType" optionValue="deviceType" [placeholder]="'Select Type'" />
         </div>
       </div>
 
@@ -111,10 +116,15 @@
       </div>
 
       <div class="users h-72 overflow-y-auto">
-        @for(user of selected_devices() ; track $index){
-        <div class="single_user mb-4 p-4 rounded-xl shadow ">
+        @for(user of selected_devices() ; track $index ; let i = $index){
+        <div class="single_user mb-4 p-4 rounded-xl shadow flex items-center justify-between">
 
           <p>{{user?.deviceName}}</p>
+
+          <button (click)="selected_devices().splice(i , 1) ; devices().push(user)">
+            <i class="fi fi-rr-trash text-danger_color"></i>
+          </button>
+
         </div>
         }
       </div>
@@ -158,10 +168,12 @@
 
 </section>
 
-<div class="actions flex items-center gap-4 justify-end">
+<div class="actions flex items-center gap-6 justify-end">
+  @if(current_step() != 4 && current_step() != 1){
   <div class="cancel_btn">
-    <p-button label="Cancel " />
+    <p-button (onClick)="handleBackword()" label="Previous " />
   </div>
+  }
   <div class="action_btn ">
     <p-button (onClick)="handleAction()" [loading]="load_action()"
       [label]="current_step() == 4 ? currentUpdateId ? ' Update Notification' :'Add Notification' : 'Next'" />
