--- a/src/features/dashboard/notification/action/action.component.html
+++ b/src/features/dashboard/notification/action/action.component.html
@@ -1,38 +1,38 @@
 <section class="p-6 rounded-2xl shadow bg-white_color mb-12">
   @switch (current_step()) {
   @case (1) {
-  <h2 class="text-xl font-medium mb-4">Main Info</h2>
+  <h2 class="text-xl font-medium mb-4">{{ 'NOTIFICATIONS.MAIN_INFO' | translate }}</h2>
 
   <form [formGroup]="main_form" action="">
     <div class="form-group input_group col-span-12 lg:col-span-6 mb-6">
       <div class=" ">
-        <label class="block mb-2" for="">{{"ALARMS.NAME"|translate}}</label>
-        <input pInputText formControlName="name" [placeholder]="'ALARMS.NAME' | translate" />
+        <label class="block mb-2" for="">{{ 'NOTIFICATIONS.ALARM_NAME' | translate }}</label>
+        <input pInputText formControlName="name" [placeholder]="'NOTIFICATIONS.ALARM_NAME' | translate" />
       </div>
       @if(main_form.get('name')?.errors && main_form.get('name')?.touched){
-      <p class="p-2 text-sm text-danger_color m-0">{{"ALARMS.ALARM_NAME_REQ"|translate}}</p>
+      <p class="p-2 text-sm text-danger_color m-0">{{ 'NOTIFICATIONS.ALARM_NAME_REQ' | translate }}</p>
       }
     </div>
     <div class="form-group input_group col-span-12 lg:col-span-6 mb-6">
       <div class=" ">
-        <label class="block mb-2" for="">Description</label>
+        <label class="block mb-2" for="">{{ 'NOTIFICATIONS.DESCRIPTION' | translate }}</label>
         <textarea formControlName="description" name="" id="" rows="5"></textarea>
       </div>
       @if(main_form.get('description')?.errors && main_form.get('description')?.touched){
-      <p class="p-2 text-sm text-danger_color m-0">Description is required </p>
+      <p class="p-2 text-sm text-danger_color m-0">{{ 'NOTIFICATIONS.DESCRIPTION_REQ' | translate }}</p>
       }
     </div>
   </form>
   }
   @case(2){
-  <h2 class="text-xl font-medium mb-4">Users</h2>
+  <h2 class="text-xl font-medium mb-4">{{ 'NOTIFICATIONS.USERS' | translate }}</h2>
 
   <div class="grid grid-cols-12 gap-8">
     <div class="col-span-6 p-6 rounded-2xl shadow">
       <div class="mb-8">
-        <h5 class="text-lg font-medium mb-4">Users</h5>
+        <h5 class="text-lg font-medium mb-4">{{ 'NOTIFICATIONS.USERS' | translate }}</h5>
         <div class="adon-input relative w-full">
-          <input pInputText [placeholder]="'USERS.SEARCH_PLACEHOLDER' | translate" />
+          <input pInputText [placeholder]="'NOTIFICATIONS.SEARCH_PLACEHOLDER' | translate" />
           <i class="fi fi-rr-search text-xl flex items-center justify-center text-gray_light"></i>
         </div>
       </div>
@@ -40,7 +40,7 @@
       <div class="users h-72 overflow-y-auto">
         @for(user of users() ; track $index ; let i = $index){
         <div (click)="selected_users().push(user) ; users().splice(i , 1)"
-          class="single_user cursor-pointer  mb-4 p-3 rounded-xl shadow flex items-center gap-4">
+          class="single_user cursor-pointer mb-4 p-3 rounded-xl shadow flex items-center gap-4">
           <div class="user_img">
             <i class="fi fi-rr-circle-user text-4xl"></i>
           </div>
@@ -54,17 +54,17 @@
     </div>
     <div class="col-span-6 p-6 rounded-2xl shadow">
       <div class="mb-8">
-        <h5 class="text-lg font-medium mb-4">Selected Users</h5>
+        <h5 class="text-lg font-medium mb-4">{{ 'NOTIFICATIONS.SELECTED_USERS' | translate }}</h5>
         <div class="adon-input relative w-full">
-          <input pInputText [placeholder]="'USERS.SEARCH_PLACEHOLDER' | translate" />
+          <input pInputText [placeholder]="'NOTIFICATIONS.SEARCH_PLACEHOLDER' | translate" />
           <i class="fi fi-rr-search text-xl flex items-center justify-center text-gray_light"></i>
         </div>
       </div>
 
       <div class="users h-72 overflow-y-auto">
-        @for(user of selected_users() ; track $index ; let i =$index){
-        <div class="single_user mb-4 p-3 rounded-xl shadow  flex items-center ">
-          <div class=" flex-1 flex items-center gap-4">
+        @for(user of selected_users() ; track $index ; let i = $index){
+        <div class="single_user mb-4 p-3 rounded-xl shadow flex items-center">
+          <div class="flex-1 flex items-center gap-4">
             <div class="user_img">
               <i class="fi fi-rr-circle-user text-4xl"></i>
             </div>
@@ -81,26 +81,28 @@
       </div>
     </div>
   </div>
-  }@case(3){
-  <h2 class="text-xl font-medium mb-4">Devices</h2>
+  }
+  @case(3){
+  <h2 class="text-xl font-medium mb-4">{{ 'NOTIFICATIONS.DEVICES' | translate }}</h2>
   <div class="grid grid-cols-12 gap-8">
     <div class="col-span-6 p-6 rounded-2xl shadow">
       <div class="mb-8">
-        <h5 class="text-lg font-medium mb-4">Choose Devices</h5>
+        <h5 class="text-lg font-medium mb-4">{{ 'NOTIFICATIONS.CHOOSE_DEVICES' | translate }}</h5>
         <div class="flex items-center gap-2">
           <div class="adon-input relative w-full">
-            <input pInputText [placeholder]="'Search Device'" />
+            <input pInputText [placeholder]="'NOTIFICATIONS.SEARCH_DEVICE' | translate" />
             <i class="fi fi-rr-search text-xl flex items-center justify-center text-gray_light"></i>
           </div>
           <p-dropdown (onChange)="handleGetDevices()" [(ngModel)]="selected_type" [options]="devicesTypes()"
-            appendTo="body" optionLabel="deviceType" optionValue="deviceType" [placeholder]="'Select Type'" />
+            appendTo="body" optionLabel="deviceType" optionValue="deviceType"
+            [placeholder]="'NOTIFICATIONS.SELECT_TYPE' | translate" />
         </div>
       </div>
 
       <div class="users h-72 overflow-y-auto">
         @for(device of devices() ; track $index ; let i = $index){
         <div (click)="selected_devices().push(device) ; devices().splice(i , 1)"
-          class="single_user cursor-pointer  mb-4 p-4 rounded-xl shadow ">
+          class="single_user cursor-pointer mb-4 p-4 rounded-xl shadow">
           <p>{{device?.deviceName}}</p>
         </div>
         }
@@ -108,9 +110,9 @@
     </div>
     <div class="col-span-6 p-6 rounded-2xl shadow">
       <div class="mb-8">
-        <h5 class="text-lg font-medium mb-4">Selected Device</h5>
+        <h5 class="text-lg font-medium mb-4">{{ 'NOTIFICATIONS.SELECTED_DEVICE' | translate }}</h5>
         <div class="adon-input relative w-full">
-          <input pInputText [placeholder]="'Search Device'" />
+          <input pInputText [placeholder]="'NOTIFICATIONS.SEARCH_DEVICE' | translate" />
           <i class="fi fi-rr-search text-xl flex items-center justify-center text-gray_light"></i>
         </div>
       </div>
@@ -118,37 +120,30 @@
       <div class="users h-72 overflow-y-auto">
         @for(user of selected_devices() ; track $index ; let i = $index){
         <div class="single_user mb-4 p-4 rounded-xl shadow flex items-center justify-between">
-
           <p>{{user?.deviceName}}</p>
-
           <button (click)="selected_devices().splice(i , 1) ; devices().push(user)">
             <i class="fi fi-rr-trash text-danger_color"></i>
           </button>
-
         </div>
         }
       </div>
     </div>
   </div>
-  }@case(4){
-  <h2 class="text-xl font-medium mb-4">Alarms</h2>
+  }
+  @case(4){
+  <h2 class="text-xl font-medium mb-4">{{ 'NOTIFICATIONS.ALARMS' | translate }}</h2>
   <div>
     <div class="form_group mb-6">
-      <label class="block mb-2" for="">Alarm Tempelte</label>
+      <label class="block mb-2" for="">{{ 'NOTIFICATIONS.ALARM_TEMPLATE' | translate }}</label>
       <p-dropdown (onChange)="handleGetTemplates()" [(ngModel)]="selected_templete" optionLabel="templateName"
-        [options]="alarm_tempeletes()" appendTo="body" [placeholder]="'Select Tempelte'" />
+        [options]="alarm_tempeletes()" appendTo="body" [placeholder]="'NOTIFICATIONS.SELECT_TEMPLATE' | translate" />
     </div>
-
-
 
     <div>
       @for(seg of data_segments() ; track $index){
       <div class="seg p-4 flex items-center justify-between rounded-xl border border-gray_light/30 shadow-sm mb-4">
         <p>{{seg?.name}}</p>
-
-
-
-        <div class="flex items-center gap-4 ">
+        <div class="flex items-center gap-4">
           @for(not of seg?.notifications ; track $index){
           <button (click)="not.isActive = !not.isActive">
             <i [classList]="not?.icon" [ngClass]="{'text-primary':not?.isActive}"></i>
@@ -158,24 +153,18 @@
       </div>
       }
     </div>
-
-
-
-
   </div>
   }
   }
-
 </section>
 
 <div class="actions flex items-center gap-6 justify-end">
   @if(current_step() != 4 && current_step() != 1){
   <div class="cancel_btn">
-    <p-button (onClick)="handleBackword()" label="Previous " />
+    <p-button (onClick)="handleBackword()" [label]="'NOTIFICATIONS.PREVIOUS' | translate" />
   </div>
   }
-  <div class="action_btn ">
-    <p-button (onClick)="handleAction()" [loading]="load_action()"
-      [label]="current_step() == 4 ? currentUpdateId ? ' Update Notification' :'Add Notification' : 'Next'" />
+  <div class="action_btn">
+    <p-button (onClick)="handleAction()" [loading]="load_action()" [label]="getActionLabel()" />
   </div>
 </div>
