--- a/src/core/components/sidebar-main-layout/sidebar-main-layout.component.html
+++ b/src/core/components/sidebar-main-layout/sidebar-main-layout.component.html
@@ -1,5 +1,5 @@
 <aside [dir]="is_ar() ? 'rtl':'ltr'" class="sidebar_container relative py-8 ">
-  <div class="logo_container flex items-center justify-center mb-6">
+  <div class="logo_container flex items-center justify-center ">
     @if(isExpand){
     <button class="ac" (click)="handleCollapse()">
       <i class="fi fi-rr-compress-alt"></i>
