--- a/src/core/components/breadcrumb/breadcrumb.component.scss
+++ b/src/core/components/breadcrumb/breadcrumb.component.scss
@@ -36,3 +36,76 @@ nav {
     padding: 0;
   }
 }
+
+
+
+.notifications {
+  @apply bg-white_color;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+
+
+.mainDotWrap {
+  display: flex;
+  position: absolute;
+  width: 0.75em;
+  height: 0.75em;
+  left: 2em;
+  top: 0em;
+}
+
+// animate-ping absolute -left-[3px] -top-[3px] inline-flex h-full w-full rounded-full bg-primary/50 opacity-75
+.singleDt {
+  animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
+  position: absolute;
+  left: -1px;
+  top: -1px;
+  display: inline-flex;
+  width: 100%;
+  height: 100%;
+  border-radius: 99999px;
+  background-color: #E21073;
+  opacity: 75%;
+}
+
+// relative inline-flex rounded-full w-[6px] h-[6px] bg-primary
+.vvDt {
+  position: relative;
+  display: inline-flex;
+  border-radius: 9999px;
+  width: 10px;
+  height: 10px;
+  background-color: #E21073;
+}
+
+@keyframes ping {
+
+  75%,
+  100% {
+    transform: scale(2);
+    opacity: 0;
+  }
+}
+
+
+::ng-deep .notification_panal {
+  min-width: 500px;
+
+  height: 450px;
+
+  overflow-y: scroll;
+
+}
+
+
+@media screen and (max-width:1175px) {
+  .title i {
+    display: block !important;
+  }
+}
