--- a/src/features/dashboard/users-management/users-list/users-list.component.html
+++ b/src/features/dashboard/users-management/users-list/users-list.component.html
@@ -246,7 +246,7 @@
     <div class="flex justify-center">
       <div class="action_btn">
         <p-button [loading]="loadDelete()" (onClick)="handleDeleteUser()"
-          [disabled]="confirm_input.value.toLocaleLowerCase() !== 'delete'" [label]="'DEVICES.DELETE' | translate" />
+          [disabled]="handleDisabledDelete(confirm_input.value)" [label]="'DEVICES.DELETE' | translate" />
       </div>
     </div>
   </ng-template>
