--- a/src/core/components/sidebar-main-layout/sidebar-main-layout.component.html
+++ b/src/core/components/sidebar-main-layout/sidebar-main-layout.component.html
@@ -12,7 +12,7 @@
     <div class="close hidden">
       <button (click)="handleCloseOver()"><i class="fi text-white_color fi-rr-cross"></i></button>
     </div>
-    <img src="images/logo_main-white.svg" alt="">
+    <img width="140" src="images/images/logo.svg" alt="">
   </div>
 
 
