--- a/src/features/auth/forget-password/forget-password.component.html
+++ b/src/features/auth/forget-password/forget-password.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col  justify-center  h-full">
+<!-- <div class="flex flex-col  justify-center  h-full">
   <div class="head text-center mb-12">
     <h2 class="text-5xl font-semibold text-white_color mb-4">
       {{ 'AUTH.FORGOT_PASSWORD_TITLE' | translate }}
@@ -48,4 +48,54 @@
       {{ 'AUTH.LOGIN' | translate }}
     </a>
   </p>
-</div>
+</div> -->
+
+
+<section class="h-screen">
+  <div class="flex items-center justify-center h-full relative">
+    <div class="login">
+      <div class="welcom text-center mb-6">
+        <div class="logo mb-8">
+          <img width="250" loading="lazy" class="mx-auto" src="images/images/logo_primary.svg" alt="">
+        </div>
+        <div>
+          <h1 class="text-2xl font-semibold mb-4">Forgot Password? </h1>
+          <p class="text-gray_light">We will send you a one-time password <br> to restore access to your profile</p>
+        </div>
+      </div>
+
+      <form [formGroup]="forgot_pass_form" class="login_form relative">
+        <img class="absolute eliapse1" loading="lazy" src="images/images/eliapse1.svg" alt="">
+
+        <div class="form_group mb-20">
+          <label for="email" class="text-xl block mb-3">Email Address</label>
+          <div class="input_icon_group ">
+            <input id="email" formControlName="email" type="email" pInputText placeholder="Example@gmail.com" />
+            <i class="fi text-lg fi-rr-envelope"></i>
+          </div>
+          @if(forgot_pass_form.get('email')?.errors && forgot_pass_form.get('email')?.touched){
+          <div>
+            @if(forgot_pass_form.get('email')?.getError('required')){
+            <p class="p-2 text-sm text-danger_color m-0">Email is required</p>
+            }
+            @if(forgot_pass_form.get('email')?.getError('email')){
+            <p class="p-2 text-sm text-danger_color m-0">Enter vaild email address</p>
+            }
+          </div>
+          }
+        </div>
+
+
+
+        <div class="auth_btn">
+          <p-button (click)="handleForgetPassword()" [loading]="isLoading()" label="Send OTP"
+            [disabled]="forgot_pass_form.get('email')?.invalid && forgot_pass_form.get('phone_number')?.invalid " />
+        </div>
+
+      </form>
+    </div>
+
+    <img class="absolute eliapse2 left-0 bottom-24" src="images/images/eliapse2.svg" alt="">
+
+  </div>
+</section>
