--- a/src/core/components/breadcrumb/breadcrumb.component.html
+++ b/src/core/components/breadcrumb/breadcrumb.component.html
@@ -11,7 +11,7 @@
 
     <div class="flex items-center gap-5 flex-wrap">
       <div class="flex items-center gap-3 flex-wrap">
-        <img src="images/IoTech-Logo2024 2.svg" width="80" alt="">
+        <img src="images/images/logo_primary.svg" width="80" alt="">
 
 
       </div>
